LandMatrix. Update ID of the indicators

--- a/LandMatrixExtractor/config/configuration.ini
+++ b/LandMatrixExtractor/config/configuration.ini
@@ -7,7 +7,7 @@ first_valid_year = 2014
 
 [TRANSLATOR]
 org_id = lm
-obs_int = 1859
+obs_int = 1856
 sli_int = 0
 dat_int = 1
 igr_int = 0
@@ -33,130 +33,20 @@ name = Creative Commons Attribution-NonComercial-ShareAlike 3.0 Unported (CC BY-
 url = http://creativecommons.org/licenses/by-nc-sa/3.0/7
 
 [INDICATORS]
-codes = ["INDICATOR_0", "INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6", "INDICATOR_7", "INDICATOR_8", "INDICATOR_9", "INDICATOR_10", "INDICATOR_11", "INDICATOR_12", "INDICATOR_13", "INDICATOR_14", "INDICATOR_15", "INDICATOR_16", "INDICATOR_17", "INDICATOR_18", "INDICATOR_19", "INDICATOR_20", "INDICATOR_21", "INDICATOR_22", "INDICATOR_23", "INDICATOR_24", "INDICATOR_25", "INDICATOR_26", "INDICATOR_27", "INDICATOR_28", "INDICATOR_29", "INDICATOR_30", "INDICATOR_31", "INDICATOR_32", "INDICATOR_33", "INDICATOR_34", "INDICATOR_35", "INDICATOR_36", "INDICATOR_37", "INDICATOR_38", "INDICATOR_39", "INDICATOR_40", "INDICATOR_41"]
+codes = ["INDICATOR_N1", "INDICATOR_HA1", "INDICATOR_N2", "INDICATOR_HA2", "INDICATOR_N3", "INDICATOR_HA3", "INDICATOR_N4", "INDICATOR_HA4", "INDICATOR_N5", "INDICATOR_HA5", "INDICATOR_N6", "INDICATOR_HA6", "INDICATOR_N7", "INDICATOR_HA7", "INDICATOR_N8", "INDICATOR_HA8", "INDICATOR_N9", "INDICATOR_HA9", "INDICATOR_N10", "INDICATOR_HA10", "INDICATOR_N11", "INDICATOR_HA11", "INDICATOR_N12", "INDICATOR_HA12", "INDICATOR_N13", "INDICATOR_HA13", "INDICATOR_N14", "INDICATOR_HA14", "INDICATOR_N15", "INDICATOR_HA15", "INDICATOR_N16", "INDICATOR_HA16", "INDICATOR_N17", "INDICATOR_HA17", "INDICATOR_N18", "INDICATOR_HA18", "INDICATOR_N19", "INDICATOR_HA19", "INDICATOR_N20", "INDICATOR_HA20", "INDICATOR_N21", "INDICATOR_HA21"]
 
-[INDICATOR_0]
-id = 0
+[INDICATOR_N1]
+id = N1
 unit = Units
 name_en = Total number of deals
-name_es = Total number of deals
-name_fr = Nombre total de transactions
+name_es = FIXME
+name_fr = FIXME
 desc_en = No available description.
 desc_es = Ninguna descripción disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_1]
-id = 1
-unit = Units
-name_en = Total number of agriculture deals
-name_es = FIXME
-name_fr = Nombre total de transactions (agriculture)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_2]
-id = 2
-unit = Units
-name_en = Total number of conservation deals
-name_es = FIXME
-name_fr = Nombre total de transactions (conservation)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_3]
-id = 3
-unit = Units
-name_en = Total number of forestry deals
-name_es = FIXME
-name_fr = Nombre total de transactions (sylviculture)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_4]
-id = 4
-unit = Units
-name_en = Total number of industry deals
-name_es = FIXME
-name_fr = Nombre total de transactions (industrie)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_5]
-id = 5
-unit = Units
-name_en = Total number of renewable energy deals
-name_es = FIXME
-name_fr = Nombre total de transactions (nergies renouvelables)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_6]
-id = 6
-unit = Units
-name_en = Total number of tourism deals
-name_es = FIXME
-name_fr = Nombre total de transactions (tourisme)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_7]
-id = 7
-unit = Units
-name_en = Total number of deals of other topic
-name_es = FIXME
-name_fr = Nombre total de transactions (autre)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_8]
-id = 8
-unit = Units
-name_en = Total number of deals of unknown topic
-name_es = FIXME
-name_fr = Nombre total de transactions (Aucune description disponible.)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_9]
-id = 9
-unit = Units
-name_en = Total deals in intended state
-name_es = FIXME
-name_fr = Nombre total de transactions (prvues)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_10]
-id = 10
-unit = Units
-name_en = Total deals in concluded state
-name_es = FIXME
-name_fr = Nombre total de transactions (conclues)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_11]
-id = 11
-unit = Units
-name_en = Total deals in failed state
-name_es = FIXME
-name_fr = Nombre total de transactions (chec)
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_12]
-id = 12
+[INDICATOR_HA1]
+id = HA1
 unit = Hectares
 name_en = Total hectares in deals
 name_es = FIXME
@@ -165,118 +55,98 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_13]
-id = 13
-unit = Hectares
-name_en = Total hectares in intended deals
+[INDICATOR_N2]
+id = N2
+unit = Units
+name_en = Total number of Concluded deals
 name_es = FIXME
-name_fr = Nombre total d'hectares concerns par les transactions (prvues)
+name_fr = Nombre total de transactions (conclues)
 desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_14]
-id = 14
+[INDICATOR_HA2]
+id = HA2
 unit = Hectares
-name_en = Total hectares in contracted deals
+name_en = Total hectares in Concluded deals
 name_es = FIXME
 name_fr = Nombre total d'hectares concerns par les transactions (conclues)
 desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_15]
-id = 15
+[INDICATOR_N3]
+id = N3
+unit = Units
+name_en = Total number of Intended deals
+name_es = FIXME
+name_fr = Nombre total de transactions (prvues)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA3]
+id = HA3
 unit = Hectares
-name_en = Total hectares in deals in production
+name_en = Total hectares in Intended deals
+name_es = FIXME
+name_fr = Nombre total d'hectares concerns par les transactions (prvues)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_N4]
+id = N4
+unit = Units
+name_en = Total number of Failed deals
+name_es = FIXME
+name_fr = Nombre total de transactions (chec)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA4]
+id = HA4
+unit = Hectares
+name_en = Total hectares of Failed deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_N5]
+id = N5
+unit = Units
+name_en = Total number of deals in Production
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA5]
+id = HA5
+unit = Hectares
+name_en = Total hectares in deals in Production
 name_es = FIXME
 name_fr = Nombre total d'hectares concerns par les transactions (en cours)
 desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_16]
-id = 16
+[INDICATOR_N6]
+id = N6
 unit = Units
-name_en = Total number of biofuel (Agriculture) deals
+name_en = Total number of agriculture deals
 name_es = FIXME
-name_fr = FIXME
+name_fr = Nombre total de transactions (agriculture)
 desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_17]
-id = 17
-unit = Units
-name_en = Total number of Food crops (Agriculture) deals
-name_es = FIXME
-name_fr = FIXME
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_18]
-id = 18
-unit = Units
-name_en = Total number of Livestock (Agriculture) deals
-name_es = FIXME
-name_fr = FIXME
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_19]
-id = 19
-unit = Units
-name_en = Total number of Non-food agricultural commodities (Agriculture) deals
-name_es = FIXME
-name_fr = FIXME
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_20]
-id = 20
-unit = Units
-name_en = Total number of Agriunspecified (Agriculture) deals
-name_es = FIXME
-name_fr = FIXME
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_21]
-id = 21
-unit = Units
-name_en = Total number of For wood and fibre (Forestry) deals
-name_es = FIXME
-name_fr = FIXME
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_22]
-id = 22
-unit = Units
-name_en = Total number of For carbon sequestration/REDD (Forestry) deals
-name_es = FIXME
-name_fr = FIXME
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_23]
-id = 23
-unit = Units
-name_en = Total number of Forestunspecified (Forestry) deals
-name_es = FIXME
-name_fr = FIXME
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_24]
-id = 24
+[INDICATOR_HA6]
+id = HA6
 unit = Hectares
 name_en = Total hectares in agriculture deals
 name_es = FIXME
@@ -285,8 +155,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_25]
-id = 25
+[INDICATOR_N7]
+id = N7
+unit = Units
+name_en = Total number of conservation deals
+name_es = FIXME
+name_fr = Nombre total de transactions (conservation)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA7]
+id = HA7
 unit = Hectares
 name_en = Total hectares in conservation deals
 name_es = FIXME
@@ -295,8 +175,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_26]
-id = 26
+[INDICATOR_N8]
+id = N8
+unit = Units
+name_en = Total number of forestry deals
+name_es = FIXME
+name_fr = Nombre total de transactions (sylviculture)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA8]
+id = HA8
 unit = Hectares
 name_en = Total hectares in forestry deals
 name_es = FIXME
@@ -305,8 +195,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_27]
-id = 27
+[INDICATOR_N9]
+id = N9
+unit = Units
+name_en = Total number of industry deals
+name_es = FIXME
+name_fr = Nombre total de transactions (industrie)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA9]
+id = HA9
 unit = Hectares
 name_en = Total hectares in industry deals
 name_es = FIXME
@@ -315,8 +215,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_28]
-id = 28
+[INDICATOR_N10]
+id = N10
+unit = Units
+name_en = Total number of renewable energy deals
+name_es = FIXME
+name_fr = Nombre total de transactions (nergies renouvelables)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA10]
+id = HA10
 unit = Hectares
 name_en = Total hectares in renewable energy deals
 name_es = FIXME
@@ -325,8 +235,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_29]
-id = 29
+[INDICATOR_N11]
+id = N11
+unit = Units
+name_en = Total number of tourism deals
+name_es = FIXME
+name_fr = Nombre total de transactions (tourisme)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA11]
+id = HA11
 unit = Hectares
 name_en = Total hectares in tourism deals
 name_es = FIXME
@@ -335,8 +255,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_30]
-id = 30
+[INDICATOR_N12]
+id = N12
+unit = Units
+name_en = Total number of deals of other topic
+name_es = FIXME
+name_fr = Nombre total de transactions (autre)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA12]
+id = HA12
 unit = Hectares
 name_en = Total hectares in deals of other topic
 name_es = FIXME
@@ -345,8 +275,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_31]
-id = 31
+[INDICATOR_N13]
+id = N13
+unit = Units
+name_en = Total number of deals of unknown topic
+name_es = FIXME
+name_fr = Nombre total de transactions (Aucune description disponible.)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA13]
+id = HA13
 unit = Hectares
 name_en = Total hectares in deals of unknown topic
 name_es = FIXME
@@ -355,8 +295,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_32]
-id = 32
+[INDICATOR_N14]
+id = N14
+unit = Units
+name_en = Total number of biofuel (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA14]
+id = HA14
 unit = Hectares
 name_en = Total hectares in biofuel (Agriculture) deals
 name_es = FIXME
@@ -365,8 +315,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_33]
-id = 33
+[INDICATOR_N15]
+id = N15
+unit = Units
+name_en = Total number of Food crops (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA15]
+id = HA15
 unit = Hectares
 name_en = Total hectares in Food crops (Agriculture) deals
 name_es = FIXME
@@ -375,8 +335,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_34]
-id = 34
+[INDICATOR_N16]
+id = N16
+unit = Units
+name_en = Total number of Livestock (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA16]
+id = HA16
 unit = Hectares
 name_en = Total hectares in Livestock (Agriculture) deals
 name_es = FIXME
@@ -385,8 +355,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_35]
-id = 35
+[INDICATOR_N17]
+id = N17
+unit = Units
+name_en = Total number of Non-food agricultural commodities (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA17]
+id = HA17
 unit = Hectares
 name_en = Total hectares in Non-food agricultural commodities (Agriculture) deals
 name_es = FIXME
@@ -395,8 +375,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_36]
-id = 36
+[INDICATOR_N18]
+id = N18
+unit = Units
+name_en = Total number of Agriunspecified (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA18]
+id = HA18
 unit = Hectares
 name_en = Total hectares in Agriunspecified (Agriculture) deals
 name_es = FIXME
@@ -405,8 +395,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_37]
-id = 37
+[INDICATOR_N19]
+id = N19
+unit = Units
+name_en = Total number of For wood and fibre (Forestry) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA19]
+id = HA19
 unit = Hectares
 name_en = Total hectares in For wood and fibre (Forestry) deals
 name_es = FIXME
@@ -415,8 +415,18 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_38]
-id = 38
+[INDICATOR_N20]
+id = N20
+unit = Units
+name_en = Total number of For carbon sequestration/REDD (Forestry) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA20]
+id = HA20
 unit = Hectares
 name_en = Total hectares in For carbon sequestration/REDD (Forestry) deals
 name_es = FIXME
@@ -425,30 +435,20 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
-[INDICATOR_39]
-id = 39
+[INDICATOR_N21]
+id = N21
+unit = Units
+name_en = Total number of Forestunspecified (Forestry) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA21]
+id = HA21
 unit = Hectares
 name_en = Total hectares in Forestunspecified (Forestry) deals
-name_es = FIXME
-name_fr = FIXME
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_40]
-id = 40
-unit = Hectares
-name_en = Total hectares in failed deals
-name_es = FIXME
-name_fr = FIXME
-desc_en = No available description.
-desc_es = Ninguna descripcin disponible.
-desc_fr = Aucune description disponible.
-
-[INDICATOR_41]
-id = 41
-unit = Units
-name_en = Total number of in prodcution deals
 name_es = FIXME
 name_fr = FIXME
 desc_en = No available description.
