--- a/FaostatExtractor/files/configuration.ini
+++ b/FaostatExtractor/files/configuration.ini
@@ -12,7 +12,6 @@ result_file_path = ./downloaded_data/info_indicators.txt
 [TRANSLATOR]
 indicator_names_valid_path = ./files/indicator_names.txt
 historical_mode = True
-org_id = faostat
 obs_int = 81856
 sli_int = 0
 dat_int = 1
@@ -26,6 +25,7 @@ description_en = Achieving food security for all is at the heart of FAO's effort
 description_es = Alcanzar la seguridad alimentaria para todos y asegurar que las personas tengan acceso a alimentos de buena calidad que les permitan llevar una vida activa y saludable es la esencia de las actividades de la FAO. Nuestros tres objetivos principales son: la erradicación del hambre, la inseguridad alimentaria y la malnutrición, la eliminación de la pobreza y el impulso del progreso económico y social para todos, y la ordenación y utilización sostenibles de los recursos naturales, incluida la tierra, el agua, el aire, el clima y los recursos genéticos, en beneficio de las generaciones presentes y futuras.
 description_fr = Atteindre la sécurité alimentaire pour tous est au coeur des efforts de la FAO - veiller à ce que les êtres humains aient un accès régulier à une nourriture de bonne qualité qui leur permette de mener une vie saine et active. Nos trois principaux objectifs sont les suivants: contribuer à éradiquer la faim, l'insécurité alimentaire et la malnutrition; éliminer la pauvreté et favoriser le progrès social et économique pour tous; et gérer et utiliser de manière durable les ressources naturelles, y compris la terre, l’eau, l’air, le climat et les ressources génétiques, au profit des générations présentes et futures.
 chain_for_id = FAO
+acronym = FAO
 
 [USER]
 login = FaostatImporter
@@ -44,7 +44,7 @@ url = http://www.fao.org/contact-us/terms/en/
 codes = ["INDICATOR1","INDICATOR2","INDICATOR3","INDICATOR4","INDICATOR5","INDICATOR6","INDICATOR7","INDICATOR8","INDICATOR9","INDICATOR10"]
 
 [INDICATOR1]
-id = 1
+id = 6610-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
@@ -56,10 +56,11 @@ name_fr = Superficie agricole
 desc_en = Agricultural area, this category is the sum of areas under "Arable land and Permanent crops" and "Permanent pastures".
 desc_es = Esta categoría se refiere a la suma total de las áreas bajo “Tierra arable" y "Cultivos permanentes" y "Praderas y pastos permanentes".
 desc_fr = Cette catégorie est la somme des terres arables, des cultures permanentes et des Prairies et pâturages permanents.
-faocode = 6610
+fao_item_code = 6610
+fao_element_code = 5110
 
 [INDICATOR2]
-id = 2
+id = 6621-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
@@ -71,10 +72,11 @@ name_fr = Terres arables
 desc_en = Arable land is the land under temporary agricultural crops (multiple-cropped areas are counted only once), temporary meadows for mowing or pasture, land under market and kitchen gardens and land temporarily fallow (less than five years). The abandoned land resulting from shifting cultivation is not included in this category. Data for "Arable land" are not meant to indicate the amount of land that is potentially cultivable.
 desc_es = Corresponde a la tierra bajo los cultivos agrícolas temporales (las múltiples áreas de cultivo se contabilizan solo una vez), a las praderas temporales para segado o pastoreo, terrenos de uso comercial y huertas, y el barbecho temporal (menos de cinco años). La tierra bajo cultivos migratorios (que queda abandonada cuando se cambia el cultivo) no está incluida en esta categoría. Los datos de la “Tierra arable” no están pensados para indicar la cantidad de tierra que es potencialmente cultivable. Los datos se expresan en miles de hectáreas.
 desc_fr = Terres affectées à des cultures temporaires (les zones de polyculture ne sont comptées qu'une fois), prairies temporaires à faucher ou à pâturer, cultures maraîchères et jardins potagers, et jachères temporaires (moins de cinq ans). Les terres abandonnées du fait de la culture itinérante n'entrent pas dans cette catégorie. Les données correspondant à "Terres arables" ne sont pas censées inclure les surfaces potentiellement cultivables. Les données sont exprimées en 1000 hectares.
-faocode = 6621
+fao_item_code = 6621
+fao_element_code = 5110
 
 [INDICATOR3]
-id = 3
+id = 6661-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
@@ -86,10 +88,11 @@ name_fr = Superficie forestière
 desc_en = Forest area is the land spanning more than 0.5 hectares with trees higher than 5 metres and a canopy cover of more than 10 percent, or trees able to reach these thresholds in situ. It does not include land that is predominantly under agricultural or urban land use. Forest is determined both by the presence of trees and the absence of other predominant land uses. The trees should be able to reach a minimum height of 5 metres (m) in situ. Areas under reforestation that have not yet reached but are expected to reach a canopy cover of 10 percent and a tree height of 5 m are included, as are temporarily unstocked areas, resulting from human intervention or natural causes, which are expected to regenerate. Includes: areas with bamboo and palms provided that height and canopy cover criteria are met; forest roads, firebreaks and other small open areas; forest in national parks, nature reserves and other protected areas such as those of specific scientific, historical, cultural or spiritual interest; windbreaks, shelterbelts and corridors of trees with an area of more than 0.5 ha and width of more than 20 m; plantations primarily used for forestry or protective purposes, such as: rubber-wood plantations and cork, oak stands. Excludes: tree stands in agricultural production systems, for example in fruit plantations and agroforestry systems. The term also excludes trees in urban parks and gardens.
 desc_es = Corresponde al área de tierra que se extiende por más de 0.5 hectáreas, que posee árboles de más de 5 metros de altura y una cubierta del dosel de más de un 10 por ciento, o árboles que puedan alcanzar esos umbrales in situ. No incluye la tierra que predominantemente se utiliza para agricultura o para las áreas urbanas. El bosque se determina tanto por la presencia de árboles, como por la ausencia de otros usos predominantes de la tierra. Los árboles deben ser capaces de alcanzar una altura mínima de 5 metros (m) in situ. Están incluidas las áreas bajo reforestación que se espera que logren una cobertura de dosel de 10 por ciento y una altura de 5 metros, pero que aún no lo han logrado, ya que son áreas que están temporalmente vacías, debido a la intervención del ser humano o por causas naturales, pero que se espera se puedan regenerar. Incluye: áreas de bambú y palmas en las que se cumplen los criterios de altura y de cobertura de dosel; carreteras forestales, cortafuegos y otras pequeñas áreas abiertas; los bosques en los parques nacionales, las reservas naturales y otras áreas protegidas tales como aquellas de interés científico, histórico, cultural o espiritual; abrigaderos, hileras de árboles para proteger del viento y corridas de árboles con un área de más de 0.5 ha y una extensión de más de 20 m; plantaciones utilizadas principalmente para propósitos forestales o de protección, tales como: plantaciones de árboles de caucho y corcho, bosques de roble. No incluye: formaciones forestales en sistemas de producción agrícola, por ejemplo, en plantaciones frutales y sistemas agroforestales. Esta categoría tampoco incluye los árboles que están en los parques urbanos y jardines. Los datos se expresan en miles de hectáreas.
 desc_fr = Terres d'une superficie de plus de 0,5 hectare portant des arbres de plus de 5 mètres de haut avec un couvert forestier supérieur à 10 pour cent, ou des arbres capables d'atteindre ces critères in situ. Cette catégorie n'inclut pas les terres affectées de manière prédominante à une utilisation agricole ou urbaine. La forêt se définit à la fois par la présence d'arbres et par l'absence d'autres utilisations des sols. Les arbres doivent pouvoir atteindre une hauteur minimum de 5 mètres (m) in situ. Les superficies en cours de reboisement qui ne satisfont pas encore aux critères de 5 mètres de hauteur pour les arbres et de 10 pour cent du couvert forestier mais qui devraient les remplir sont incluses dans cette catégorie, de même que les superficies temporairement déboisées, par suite d'une intervention humaine ou de causes naturelles, appelées à se régénérer. Sont également incluses : les superficies plantées en bambous et en palmiers pour autant qu'elles réunissent les critères de hauteur et de couvert forestier, les routes de forêt, les pare-feux et autres espaces libres; les forêts des parcs nationaux, réserves naturelles et autres zones protégées, notamment les zones d'intérêt scientifique, historique, culturel ou spirituel, les brise-vents, les rideaux abris et les allées d'arbres dont la superficie excède 0,5 hectare et la largeur 20 mètres ainsi que les plantations destinées à une exploitation forestière ou de protection tels que : plantations d'hévéas et de chêne-liège, peuplements de chênes. Sont exclus: les peuplements des systèmes de production agricole, par exemple les plantations d'arbres fruitiers et les systèmes d'agroforesterie. Sont également exclus de cette catégorie les arbres des jardins et parcs urbains. Les données sont exprimées par 1000 hectares.
-faocode = 6661
+fao_item_code = 6661
+fao_element_code = 5110
 
 [INDICATOR4]
-id = 4
+id = 6601-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
@@ -101,10 +104,12 @@ name_fr = Superficie des terres
 desc_en = Land area is the total area of the country excluding area under inland water bodies.
 desc_es = Corresponde al área total del país sin incluir el área de las aguas continentales. Las posibles variaciones en los datos pueden deberse a la actualización y revisión de los datos nacionales y no necesariamente a una variación de la superficie. Los datos se expresan en miles de hectáreas.
 desc_fr = Superficie totale du pays à l'exclusion des eaux intérieures. Les variations éventuelles peuvent s'expliquer par les mises à jour et les révisions des données par pays et ne reflètent pas nécessairement des changements de superficie. Les données sont exprimées par 1000 hectares.
-faocode = 6601
+fao_item_code = 6601
+fao_element_code = 5110
+
 
 [INDICATOR5]
-id = 5
+id = X-6610-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Percentage of total
@@ -115,10 +120,9 @@ name_fr = Superficie agricole relatif
 desc_en = Relative agricultural land.
 desc_es = Superficie agricola relativa.
 desc_fr = Superficie agricole relatif.
-faocode = 999888777
 
 [INDICATOR6]
-id = 6
+id = X-6621-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Percentage of total
@@ -129,10 +133,10 @@ name_fr = Terres arables relatifs
 desc_en = Relative arable land.
 desc_es = Tierras arables relativas.
 desc_fr = Terres arables relatifs.
-faocode = 999888776
+
 
 [INDICATOR7]
-id = 7
+id = X-6661-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Percentage of total
@@ -143,10 +147,9 @@ name_fr = Superficie forestière relatif
 desc_en = Relative forest land.
 desc_es = Superficie forestal relativa.
 desc_fr = Superficie forestière relatif.
-faocode = 999888775
 
 [INDICATOR8]
-id = 8
+id = 6650-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
@@ -158,10 +161,11 @@ name_fr = Permanent crops FIXME
 desc_en = Permanent crops FIXME
 desc_es = Permanent crops FIXME
 desc_fr = Permanent crops FIXME
-faocode = 6650
+fao_item_code = 6650
+fao_element_code = 5110
 
 [INDICATOR9]
-id = 9
+id = 6655-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
@@ -173,10 +177,11 @@ name_fr = Permanent meadows and pastures FIXME
 desc_en = Permanent meadows and pastures FIXME
 desc_es = Permanent meadows and pastures FIXME
 desc_fr = Permanent meadows and pastures FIXME
-faocode = 6655
+fao_item_code = 6655
+fao_element_code = 5110
 
 [INDICATOR10]
-id = 10
+id = 6671-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
@@ -188,5 +193,5 @@ name_fr = Agricultural area organic, total FIXME
 desc_en = Agricultural area organic, total FIXME
 desc_es = Agricultural area organic, total FIXME
 desc_fr = Agricultural area organic, total FIXME
-faocode = 6671
-
+fao_item_code = 6671
+fao_element_code = 5110
