WorldBank importer. added support for new indicators ID

--- a/WorldBank_Importer/config/configuration.ini
+++ b/WorldBank_Importer/config/configuration.ini
@@ -33,7 +33,7 @@ Control of Corruption (Estimate) = CC.EST
 Rule of Law (Estimate) = RL.EST
 
 [CC.EST]
-indicator_id = 40
+indicator_id = CC.EST
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = %
@@ -46,7 +46,7 @@ desc_fr = FIXME
 desc_es = FIXME
 
 [RL.EST]
-indicator_id = 41
+indicator_id = RL.EST
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = %
@@ -61,7 +61,7 @@ desc_es = FIXME
 
 
 [AG.LND.IRIG.AG.ZS]
-indicator_id = 32
+indicator_id = AG.LND.IRIG.AG.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = % of total agricultural land
@@ -74,7 +74,7 @@ desc_fr = FIXME
 desc_es = FIXME
 
 [SH.H2O.SAFE.ZS]
-indicator_id = 33
+indicator_id = SH.H2O.SAFE.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = % of population with access
@@ -87,7 +87,7 @@ desc_fr = FIXME
 desc_es = FIXME
 
 [SH.H2O.SAFE.RU.ZS]
-indicator_id = 34
+indicator_id = SH.H2O.SAFE.RU.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = % of rural population with access
@@ -100,7 +100,7 @@ desc_fr = FIXME
 desc_es = FIXME
 
 [SH.H2O.SAFE.UR.ZS]
-indicator_id = 35
+indicator_id = SH.H2O.SAFE.UR.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = % of urban population with access
@@ -113,7 +113,7 @@ desc_fr = FIXME
 desc_es = FIXME
 
 [SI.POV.GINI]
-indicator_id = 36
+indicator_id = SI.POV.GINI
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = GINI index
@@ -127,7 +127,7 @@ desc_es = FIXME
 
 
 [NY.GDP.MKTP.KD.ZG]
-indicator_id = 37
+indicator_id = NY.GDP.MKTP.KD.ZG
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = annual %
@@ -140,7 +140,7 @@ desc_fr = FIXME
 desc_es = FIXME
 
 [NY.GDP.MKTP.PP.KD]
-indicator_id = 38
+indicator_id = NY.GDP.MKTP.PP.KD
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = constant 2011 international $
@@ -154,7 +154,7 @@ desc_es = FIXME
 
 
 [NY.GDP.PCAP.PP.KD]
-indicator_id = 39
+indicator_id = NY.GDP.PCAP.PP.KD
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = constant 2011 international $
@@ -176,7 +176,7 @@ employment in agriculture (% of total employment) = SL.AGR.EMPL.ZS
 surface area (sq. km) = AG.SRF.TOTL.K2
 
 [NV.AGR.TOTL.ZS]
-indicator_id = 1
+indicator_id = NV.AGR.TOTL.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = % of GDP
@@ -189,7 +189,7 @@ desc_es = La agricultura corresponde a las divisiones 1-5 de la CIIU e incluye l
 desc_fr = L'agriculture comprend les divisions 1 à 5 de la CITI et englobe la foresterie, la chasse, la pêche ainsi que les cultures et la production animale. La valeur ajoutée est la production nette d'un secteur après avoir additionné tous les sortants et soustrait tous les entrants intermédiaires. Elle est calculée sans effectuer de déductions pour la dépréciation des biens fabriqués ou la perte de valeur ou la dégradation des ressources naturelles.
 
 [AG.SRF.TOTL.K2]
-indicator_id = 2
+indicator_id = AG.SRF.TOTL.K2
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = sq. km
@@ -207,7 +207,7 @@ life expectancy at birth, female (years) = SP.DYN.LE00.FE.IN
 life expectancy at birth, male (years) = SP.DYN.LE00.MA.IN
 
 [SP.DYN.LE00.FE.IN]
-indicator_id = 3
+indicator_id = SP.DYN.LE00.FE.IN
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = years
@@ -220,7 +220,7 @@ desc_es = La esperanza de vida al nacer indica la cantidad de años que viviría
 desc_fr = L'espérance de vie à la naissance indique le nombre d'années qu'un nouveau-né devrait vivre si les règles générales de mortalité au moment de sa naissance devaient rester les mêmes tout au long de sa vie.
 
 [SP.DYN.LE00.MA.IN]
-indicator_id = 4
+indicator_id = SP.DYN.LE00.MA.IN
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = years
@@ -243,7 +243,7 @@ rural population (percentage of total population) = SP.RUR.TOTL.ZS
 urban population (percentage of total population) = SP.URB.TOTL.IN.ZS
 
 [SP.POP.TOTL]
-indicator_id = 5
+indicator_id = SP.POP.TOTL
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = Total of population
@@ -256,7 +256,7 @@ desc_es = La población total hace referencia al total de la población.
 desc_fr = La population totale est basée sur la définition de facto de la population, qui compte tous les résidants indépendamment du statut juridique ou de la citoyenneté, sauf pour les réfugiés qui ne sont pas installés de façon permanente dans le pays d’asile, et qui sont généralement considérés comme faisant partie de la population de leur pays d’origine.
 
 [SP.POP.TOTL.FE.ZS]
-indicator_id = 6
+indicator_id = SP.POP.TOTL.FE.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of total population
@@ -269,7 +269,7 @@ desc_es = La población femenina es el porcentaje de la población que es femeni
 desc_fr = La population des femmes est le pourcentage de la population des femmes.
 
 [SP.POP.GROW]
-indicator_id = 7
+indicator_id = SP.POP.GROW
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = annual percentage
@@ -282,7 +282,7 @@ desc_es = Crecimiento demográfico (% anual). Corresponde a la tasa exponencial 
 desc_fr = La croissance de la population (% annuel) correspond au taux exponentiel de croissance de la population au milieu de l'année n-1 à n, exprimée en pourcentage.
 
 [SP.POP.0014.TO.ZS]
-indicator_id = 8
+indicator_id = SP.POP.0014.TO.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of total population
@@ -295,7 +295,7 @@ desc_es = Población entre 0 y 14 años como porcentaje de la población total. 
 desc_fr = La population âgée de 0 à 14 ans en pourcentage de la population totale. La population est basée sur la définition de facto de la population.
 
 [SP.POP.1564.TO.ZS]
-indicator_id = 9
+indicator_id = SP.POP.1564.TO.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of total population
@@ -308,7 +308,7 @@ desc_es = La población entre 15 y 64 años es el porcentaje de la población to
 desc_fr = La population âgée de 15 à 64 ans est le pourcentage de la population totale qui se situe dans le groupe d’âge des 15 à 64 ans. La population est basée sur la définition de facto de la population.
 
 [SP.POP.65UP.TO.ZS]
-indicator_id = 10
+indicator_id = SP.POP.65UP.TO.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of total population
@@ -321,7 +321,7 @@ desc_es = Población mayor de 65 años como porcentaje de la población total. P
 desc_fr = La population âgée de 65 ans et plus en pourcentage de la population totale. La population est basée sur la définition de facto de la population.
 
 [SP.RUR.TOTL.ZS]
-indicator_id = 11
+indicator_id = SP.RUR.TOTL.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of total population
@@ -334,7 +334,7 @@ desc_es = La población rural hace referencia a la gente viviendo en areas rural
 desc_fr = La population rurale fait référence aux personnes vivant en milieu rural tel que défini par les bureaux nationaux de statistiques. Elle est calculée en faisant la différence entre la population totale et la la population urbaine. Elle est calculée en faisant la différence entre la population totale et la la population urbaine.
 
 [SP.URB.TOTL.IN.ZS]
-indicator_id = 12
+indicator_id = SP.URB.TOTL.IN.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of total population
@@ -357,7 +357,7 @@ mortality rate, under-5 (per 1,000 live births) = SH.DYN.MORT
 fertility rate, total (births per woman) = SP.DYN.TFRT.IN
 
 [SI.POV.NAGP]
-indicator_id = 13
+indicator_id = SI.POV.NAGP
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of the poverty line
@@ -370,7 +370,7 @@ desc_es = Brecha de pobreza a nivel de la línea de pobreza nacional. Correspond
 desc_fr = L'écart de pauvreté par rapport au seuil national de la pauvreté en milieu rural est le manque à gagner pour remonter au-dessus du seuil de la pauvreté (en considérant que les non pauvres ont un manque à gagner de zéro) exprimé en pourcentage du seuil national de la pauvreté en milieu urbain. Cette mesure témoigne à la fois de l'ampleur de la pauvreté et de sa fréquence.
 
 [SI.POV.RUGP]
-indicator_id = 14
+indicator_id = SI.POV.RUGP
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of the poverty line
@@ -383,7 +383,7 @@ desc_es = Brecha de pobreza a nivel de la línea de pobreza rural. Corresponde a
 desc_fr = L'écart de pauvreté par rapport au seuil national de la pauvreté en milieu rural est le manque à gagner pour remonter au-dessus du seuil de la pauvreté (en considérant que les non pauvres ont un manque à gagner de zéro) exprimé en pourcentage du seuil national de la pauvreté en milieu urbain.Cette mesure témoigne à la fois de l'ampleur de la pauvreté et de sa fréquence.
 
 [SI.POV.URGP]
-indicator_id = 15
+indicator_id = SI.POV.URGP
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of the poverty line
@@ -396,7 +396,7 @@ desc_es = Brecha de pobreza a nivel de la línea de pobreza urbana. Corresponde 
 desc_fr = L'écart de pauvreté par rapport au seuil national de la pauvreté en milieu rural est le manque à gagner pour remonter au-dessus du seuil de la pauvreté (en considérant que les non pauvres ont un manque à gagner de zéro) exprimé en pourcentage du seuil national de la pauvreté en milieu urbain.Cette mesure témoigne à la fois de l'ampleur de la pauvreté et de sa fréquence.
 
 [SI.POV.DDAY]
-indicator_id = 16
+indicator_id = SI.POV.DDAY
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of total population
@@ -409,7 +409,7 @@ desc_es = La población que vive con menos de US$1,25 por día es el porcentaje 
 desc_fr = La population gagnant moins de 1,25 dollars par jour est le pourcentage de la population qui vit avec moins de 1,25 dollars par jour aux prix internationaux de 2005. Par suite de la révision des taux de change à la PPA, les taux de pauvreté des pays individuels ne peuvent pas être comparés aux taux de pauvreté indiqués dans les éditions antérieures.
 
 [SH.DYN.AIDS.ZS]
-indicator_id = 17
+indicator_id = SH.DYN.AIDS.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of the population ages 15-49
@@ -422,7 +422,7 @@ desc_es = La prevalencia del VIH se refiere al porcentaje de personas de entre 1
 desc_fr = La prévalence du VIH est le pourcentage des personnes de 15 à 49 ans qui sont infectées par le VIH.
 
 [SH.DYN.MORT]
-indicator_id = 18
+indicator_id = SH.DYN.MORT
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = per 1,000 live births
@@ -435,7 +435,7 @@ desc_es = La tasa de mortalidad de niños menores de cinco años es la probabili
 desc_fr = Le taux de mortalité des enfants de moins de cinq ans est la probabilité qu'un nouveau-né sur 1 000 meure avant d'atteindre l'âge de cinq ans s'il est assujetti aux taux de mortalité par âge actuels.
 
 [SP.DYN.TFRT.IN]
-indicator_id = 19
+indicator_id = SP.DYN.TFRT.IN
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = births per woman
@@ -460,7 +460,7 @@ employees, agriculture, female (% of female employment) = SL.AGR.EMPL.FE.ZS
 employees, agriculture, male (% of male employment) = SL.AGR.EMPL.MA.ZS
 
 [SL.UEM.TOTL.FE.ZS]
-indicator_id = 20
+indicator_id = SL.UEM.TOTL.FE.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of female labor force
@@ -473,7 +473,7 @@ desc_es = El desempleo es la proporción de la población activa que no tiene tr
 desc_fr = Le chômage fait référence à la part de la population active qui est sans emploi mais qui est disponible pour et à la recherche d'un emploi. Les définitions de la population active et du chômage diffèrent selon le pays.
 
 [SL.UEM.TOTL.MA.ZS]
-indicator_id = 21
+indicator_id = SL.UEM.TOTL.MA.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of male labor force
@@ -486,7 +486,7 @@ desc_es = El desempleo es la proporción de la población activa que no tiene tr
 desc_fr = Le chômage fait référence à la part de la population active qui est sans emploi mais qui est disponible pour et à la recherche d'un emploi. Les définitions de la population active et du chômage diffèrent selon le pays.
 
 [SL.UEM.1524.FE.ZS]
-indicator_id = 22
+indicator_id = SL.UEM.1524.FE.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of female labor force ages 15-24
@@ -499,7 +499,7 @@ desc_es = El desempleo entre los jóvenes es la proporción de la población act
 desc_fr = Le chômage des jeunes fait référence à la part de la population active âgée de 15 à 24 ans sans emploi mais disponible pour et à la recherche d'un emploi. Les définitions de la population active et du chômage diffèrent selon le pays.
 
 [SL.UEM.1524.MA.ZS]
-indicator_id = 23
+indicator_id = SL.UEM.1524.MA.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of male labor force ages 15-24
@@ -512,7 +512,7 @@ desc_es = El desempleo entre los jóvenes es la proporción de la población act
 desc_fr = Le chômage des jeunes fait référence à la part de la population active âgée de 15 à 24 ans sans emploi mais disponible pour et à la recherche d'un emploi. Les définitions de la population active et du chômage diffèrent selon le pays.
 
 [SL.TLF.CACT.FE.ZS]
-indicator_id = 24
+indicator_id = SL.TLF.CACT.FE.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of female populaion ages 15
@@ -525,7 +525,7 @@ desc_es = La tasa de población activa es la proporción de la población de 15 
 desc_fr = Le taux de participation à la population active est la proportion de la population âgée de 15 ans et plus qui est économiquement active : toutes les personnes qui fournissent du travail pour la production de biens et de services au cours d'une période donnée.
 
 [SL.TLF.0714.FE.ZS]
-indicator_id = 25
+indicator_id = SL.TLF.0714.FE.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of female children ages 7-14
@@ -538,7 +538,7 @@ desc_es = Los niños económicamente activos son los niños que participaron de 
 desc_fr = Les enfants économiquement actifs sont les enfants qui ont participé à une activité économique pendant au moins une heure au cours de la semaine de référence de l'enquête.
 
 [SL.TLF.0714.MA.ZS]
-indicator_id = 26
+indicator_id = SL.TLF.0714.MA.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of male children ages 7-14
@@ -551,7 +551,7 @@ desc_es = Los niños económicamente activos son los niños que participaron de 
 desc_fr = Les enfants économiquement actifs sont les enfants qui ont participé à une activité économique pendant au moins une heure au cours de la semaine de référence de l'enquête.
 
 [SL.AGR.EMPL.ZS]
-indicator_id = 27
+indicator_id = SL.AGR.EMPL.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of total employment
@@ -564,7 +564,7 @@ desc_es = Los empleados son personas que trabajan para un empleador público o p
 desc_fr = Les employés sont des personnes qui travaillent pour un employeur du secteur public ou privé et qui reçoivent des gages, un salaire, une commission, des pourboires, une rémunération à la pièce ou une rétribution quelconque.
 
 [SL.AGR.EMPL.FE.ZS]
-indicator_id = 28
+indicator_id = SL.AGR.EMPL.FE.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of female employment
@@ -577,7 +577,7 @@ desc_es = Los empleados son personas que trabajan para un empleador público o p
 desc_fr = Les employés sont des personnes qui travaillent pour un employeur du secteur public ou privé et qui reçoivent des gages, un salaire, une commission, des pourboires, une rémunération à la pièce ou une rétribution quelconque. L'agriculture correspond à la division 1 (révision 2 de la CITI) ou aux catégories A et B (révision 3 de la CITI) et comprend la chasse, l'exploitation forestière et la pêche.
 
 [SL.AGR.EMPL.MA.ZS]
-indicator_id = 29
+indicator_id = SL.AGR.EMPL.MA.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of male employment
@@ -593,7 +593,7 @@ desc_fr = Les employés sont des personnes qui travaillent pour un employeur du 
 literacy rate, adult total (% of people ages 15 and above) = SE.ADT.LITR.ZS
 
 [SE.ADT.LITR.ZS]
-indicator_id = 30
+indicator_id = SE.ADT.LITR.ZS
 indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of people ages 15 and above
@@ -609,7 +609,7 @@ desc_fr = Taux d'alphabétisation des adultes (15 ans et +) (%). Total correspon
 malnutrition prevalence, height for age (% of children under 5) = SH.STA.STNT.ZS
 
 [SH.STA.STNT.ZS]
-indicator_id = 31
+indicator_id = SH.STA.STNT.ZS
 indicator_topic = FSECURITY_HUNGER
 indicator_tendency = DECREASE
 indicator_unit_name = percentage of children under 5
@@ -622,7 +622,6 @@ desc_es = La prevalencia de la desnutrición en la niñez representa el porcenta
 desc_fr = La prévalence de la malnutrition des enfants est le pourcentage des enfants de moins de cinq ans dont la taille, en fonction de leur âge (arrêt de la croissance), est inférieur de plus de deux fois l'écart-type à la médiane pour la population internationale de référence d'âge correspondant. La taille des enfants de moins de deux ans est mesurée à la longueur en position allongée. La taille des enfants plus vieux est mesurée en position debout.
 
 [TRANSLATOR]
-org_id = wb
 obs_int = 0
 sli_int = 0
 dat_int = 0
@@ -637,6 +636,7 @@ description_es = El Banco Mundial es una fuente fundamental de asistencia financ
 description_fr = Le Groupe de la Banque mondiale est une source essentielle d’appui financier et technique pour les pays en développement du monde entier. Il ne s'agit pas d'une banque au sens habituel du terme mais d'un partenariat sans équivalent voué à réduire la pauvreté et à appuyer le développement. Le Groupe de la Banque mondiale se compose de cinq institutions administrées par leurs États membres. Sa création remonte à 1944 et son siège est situé à Washington. Le Groupe de la Banque mondiale compte quelque 10 000 agents répartis dans plus de 120 bureaux installés dans le monde entier.
 url = http://www.worldbank.org/
 url_logo = https://lh4.googleusercontent.com/-xU-QEsk5AFA/AAAAAAAAAAI/AAAAAAAABxk/_PdqX35YRZM/s120-c/photo.jpg
+acronym = WB
 
 [LICENSE]
 republish = True
