--- a/WorldBank_Importer/config/configuration.ini
+++ b/WorldBank_Importer/config/configuration.ini
@@ -517,7 +517,7 @@ indicator_topic = GEOGRAPH_SOCIO
 indicator_tendency = INCREASE
 indicator_unit_name = percentage of female populaion ages 15
 indicator_unit_type = %
-name_en = Labor force participation rate, femal
+name_en = Labor force participation rate, female
 name_es = Tasa de población activa, mujeres
 name_fr = Taux de participation à la population active, femmes
 desc_en = Labor force participation rate is the proportion of the population ages 15 and older that is economically active: all people who supply labor for the production of goods and services during a specified period.
